fix: fix responsiveness on mobile phone in movies page

--- a/src/pages/Movies/movies.css
+++ b/src/pages/Movies/movies.css
@@ -88,6 +88,13 @@
   @media (max-width: 768px) {
     .movies-grid {
       grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      padding-right: 15px;
+    }
+    .movies-container {
+      padding: 0px;
+      color: white;
+      width: 100%;
+      background-color: #141414;
     }
   
     .filters-container {
@@ -111,6 +118,13 @@
   @media (max-width: 480px) {
     .movies-grid {
       grid-template-columns: 1fr; 
+      padding-right: 15px;
+    }
+    .movies-container {
+      padding-right: 10px;
+      color: white;
+      width: 100%;
+      background-color: #141414;
     }
   
     .search-bar input {
