--- a/src/routes/layout/layout.css
+++ b/src/routes/layout/layout.css
@@ -23,10 +23,30 @@
     /* max-width: 1200px;  */
     /* min-height: 100vh; */
     margin: 0 auto; 
-    padding-top: 0px; 
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 10px;
+    padding: 0px; 
+    box-sizing: border-box; 
+  }
+  .layout-content {
+    flex: 1;
+    min-height: 100%;
+    padding: 0px; 
     box-sizing: border-box; 
   }
 }
+@media (max-width: 480px) {
+  .layout {
+    width: 100%; 
+    /* max-width: 1200px;  */
+    /* min-height: 100vh; */
+    margin: 0 auto; 
+    padding: 0px; 
+    box-sizing: border-box; 
+  }
+  .layout-content {
+    flex: 1;
+    min-height: 100%;
+    padding: 0px; 
+    box-sizing: border-box; 
+  }
+}
+
